fix search form when collapsed
search form was pretty ugly styled when top navbar was collapsed fixed with setting with:auto.
Also removed padding and margin for the search bar so there is more space for content.
Added padding to make sure the content is not hidden behind navbar.

--- a/src/paperless-office-site/css/style.css
+++ b/src/paperless-office-site/css/style.css
@@ -1,25 +1,42 @@
-﻿html,body{
-    width:100%;
+﻿html, body {
+    width: 100%;
 }
 /*#bs-example-navbar-collapse-1{
     width:100%;
 }*/
-#search-form{
-    width:80%;
+#search-form {
+    width: 80%;
+    border:none;
+    box-shadow:none;
 }
-#search-bar{
+
+#search-bar {
     width: 300px;
-       -webkit-transition: width 1s ease-in-out;
-    -moz-transition:width 1s ease-in-out;
+    -webkit-transition: width 1s ease-in-out;
+    -moz-transition: width 1s ease-in-out;
     -o-transition: width 1s ease-in-out;
     transition: width 1s ease-in-out;
-   float:right;
+    float: right;
+    
 }
-.form-group, form{
-    width:100%;
-}
- #search-bar:focus{
-    width: 100%;
-     
 
+.form-group, form {
+    width: 100%;
+}
+
+#search-bar:focus {
+    width: 100%;
+}
+
+
+@media(max-width: 768px) {
+    #search-form {
+        width: auto;
+        padding-top:0px;
+        margin-top:0px;
+        
+    }
+    body{
+        padding:75px;
+    }
 }
